--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             background: var(--container-bg);
             padding: 60px;
@@ -88,7 +88,7 @@
             display: block;
             margin-bottom: 8px;
             font-weight: 500;
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--primary-color);
         }
         input, select {
@@ -98,7 +98,7 @@
             border-radius: 8px;
             box-sizing: border-box;
             font-family: 'Inter', sans-serif;
-            font-size: 1rem;
+            font-size: 0.9rem;
             transition: border-color 0.3s;
             background: #fafafa;
         }
@@ -154,13 +154,13 @@
         .guide-image {
             max-width: 100%;
             height: auto;
-            max-height: 500px;
+            max-height: 600px;
         }
 
         /* Layout Grid for Side-by-Side */
         .layout-grid {
             display: grid;
-            grid-template-columns: 1.4fr 1fr;
+            grid-template-columns: 1.1fr 0.9fr;
             gap: 40px;
             align-items: start;
             margin-top: 20px;
@@ -267,7 +267,7 @@
                             <label for="hip">Hip (inches)</label>
                             <input type="number" id="hip" name="hip" min="20" max="90" step="0.25" placeholder="e.g. 38" required>
                         </div>
-                        <div class="full-width-col">
+                        <div>
                             <label for="thigh">Thigh (inches)</label>
                             <input type="number" id="thigh" name="thigh" min="15" max="40" step="0.25" placeholder="e.g. 22" required>
                         </div>
