--- a/index.html
+++ b/index.html
@@ -57,13 +57,7 @@
             line-height: 1.1;
         }
         h2 {
-            color: var(--accent-color); /* Or maybe keep it dark but highlight? Let's use the accent for emphasis */
-            color: #d35400; /* A darker orange/peach for readability on white, or stick to brand? */
-            /* The brand uses peach #ffb6a3 which is light. For text on white, maybe use black or a darker shade. 
-               Let's use a darker version of the accent or just black with a highlight. 
-               Actually, let's use the primary black for H2 but maybe italic or specific style. 
-               The prompt asked for "highlighted color". Let's use a darker peach/orange for text readability. */
-            color: #e67e22; 
+            color: #ff3131; 
             font-size: 1.8rem;
             margin-top: 0;
         }
