--- a/leadercheckout.html
+++ b/leadercheckout.html
@@ -519,7 +519,7 @@
         <img src="logo.png" alt="Mea Logo">
     </div>
     <div class="container">
-        <a href="index.html" class="back-link">
+        <a href="leader" class="back-link">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
             </svg>
